<resources>
    <string name="app_name">Te Lo Llevo Ya!</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="buscar_producto">Buscar producto</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="codigo">Código</string>
    <string name="nombre">Nombre</string>
    <string name="PedidosAsignados">Pedidos asignados</string>
    <string name="monto">Monto</string>
    <string name="fecha_pedido">Fecha Pedido</string>
    <string name="fecha_entrega">Fecha Entrega</string>
    <string name="estado">Estado</string>
    <string name="cod_cliente">Codigo Cliente</string>
    <string name="repartidor">Repartidor</string>
    <string name="asignar_repartidor">Asignar Repartidor</string>
    <string name="ubicacion">Ubicación</string>
    <string name="agregar">Agregar</string>
    <string name="carrito">Carrito</string>
    <string name="tu_pedido">Tu pedido</string>
    <string name="ordenar">Ordenar</string>
    <string name="cancelar">Cancelar</string>
    <string name="finalizar">Finalizar</string>
    <string name="tot_pagar">Total a pagar</string>
    <string name="Mis_pedidos">Mis pedidos</string>
    <string name="pedidos_activos">Pedidos Activos</string>
    <string name="pedidos_realizados">Pedidos Realizados</string>
    <string name="pedidos_pendientes">Pedidos Pendientes</string>
    <string name="asignar">Asignar</string>
    <string name="selecciona_productos">Selecciona tus productos</string>
    <string name="pedidos_repartidor">Pedidos de Repartidor</string>
    <string name="hacer_pedido">Hacer Pedido</string>
    <string name="confirmar">Confirmar</string>
    <string name="confirmar_msg">Si vuelve atrás se limpiara su carrito de compras</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="confirmar_elimn_msg">¿Desea eliminar este producto de su carrito?</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="correoUsuario">CORREO:</string>
    <string name="entradaCorreo">Ingrese su correo…</string>
    <string name="contraUsuario">CONTRASEÑA:</string>
    <string name="entradaContra">Ingrese su contraseña…</string>
    <string name="botonIniciarSesion">Iniciar Sesión</string>
    <string name="botonRegistrarse">Registrarse</string>
    <string name="nombreUsuario">NOMBRE:</string>
    <string name="entradaNombre">Ingrese su nombre…</string>
    <string name="apellidoUsuario">APELLIDO:</string>
    <string name="entradaApellido">Ingrese su apellido…</string>
    <string name="nacimientoUsuario">FECHA DE NACIMIENTO:</string>
    <string name="sexoUsuario">SEXO:</string>
    <string name="entradaSexo">Ingrese su sexo…</string>
    <string name="btnNacimiento">Escoger fecha de nacimiento.</string>
    <string-array name="opciones_sexo">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
    <string name="ncontraUsuario">NUEVA CONTRASEÑA:</string>
    <string name="nentradaContra">Confirme su contraseña...</string>
    <string name="AgregarReservacion">Agregar Reservacion</string>
    <string name="fechaEntrega">Fecha de entrega: </string>
    <string name="AgregarProducto">Agregar producto:</string>
    <string name="total">Total:</string>
    <string name="pagoMinimo">Pago mínimo</string>
    <string name="descripcion">Descripción:</string>
    <string name="ingresarAnticipo">Ingresar anticipo:</string>
    <string name="irApagar">Ir a pagar</string>
    <string name="signoDollar">$</string>
    <string-array name="opciones">
        <item>Opción 1</item>
        <item>Opción 2</item>
        <item>Opción 3</item>
    </string-array>
    <string name="hacer_reservacion">Hacer reservación</string>
    <string name="actualizarReservacion">Actualizar reservación</string>
    <string name="idResevacion">ID de reservación: </string>
    <string name="fechaEntregaAc">Fecha de entrega:</string>
    <string name="guardarAc">Guardar </string>
    <string name="consultarReservaciones">Reservaciones </string>
    <string name="negocioC">Negocio: </string>
    <string name="cancelarC">Cancelar </string>
    <string name="actualizarC">Actualizar </string>
    <string name="horaEntega">Hora de entrega:</string>
    <string name="seleccionarHora">Seleccionar Hora:</string>
    <string name="negocioCrearIndicaciones">Ingrese los datos de su negocio: </string>
    <string name="negocioCrearIndicaciones2">Ingrese la ubicación de su negocio: </string>
    <string name="negocioCrearIndicaciones3">Ingrese su horario de atención: </string>
    <string name="negocioEditarIndicaciones">Actualice los datos de su negocio: </string>
    <string name="negocioEditarIndicaciones2">Actualice la ubicación de su negocio: </string>
    <string name="negocioEditarIndicaciones3">Actualice su horario de atención: </string>
    <string name="miNegocioIndicacion">Datos generales</string>
    <string name="miNegocioIndicacion1">Acciones Disponibles</string>
    <string name="botonAgregar">Agregar</string>
    <string name="botonActualizar">Actualizar</string>
    <string name="botonEliminar">Eliminar</string>
    <string name="botonActualizarNegocio2">Actualizar Negocio</string>
    <string name="botonEliminarNegocio">Eliminar Negocio</string>
    <string name="botonProductosrNegocio">Mis Productos</string>
    <string name="botonNuevoNegocio">Nuevo negocio</string>
    <string name="botonMisPedidos">Pedidos Activos</string>
    <string name="itemIndicacion">Presione un registro para ver más opciones</string>
    <string name="barraMisNegocios">Mis Negocios</string>
    <string name="barraMisProductos">Mis Productos</string>
    <string name="barraGestionarNegocio">Gestionar mi Negocio</string>
    <string name="barraCrearNegocio">Nuevo Negocio</string>
    <string name="barraCrearProducto">Crear Producto</string>
    <string name="barraEditarNegocio">Actualizar Negocio</string>
    <string name="barraEditarProducto">Actualizar Producto</string>
    <string name="negocioNombre">Negocio:</string>
    <string name="negocioTelefono">Teléfono:</string>
    <string name="negocioApertura">Apertura:</string>
    <string name="negocioCierre">Cierre:</string>
    <string name="negocioDistrito">Distrito:</string>
    <string name="negocioDepartamento">Departamento:</string>
    <string name="negocioUbicacionDescripcion">Descripción:</string>
    <string name="negocioMunicipio">Municipio:</string>
    <string name="negocioPickApertura">Seleccionar Hora Apertura</string>
    <string name="negocioPickCierre">Seleccionar Hora Cierre</string>
    <string name="negocio_nombre">Negocio: </string>
    <string name="negocio_id">ID del negocio: </string>
    <string name="negocio_ubicacion_id">ID de la ubicación: </string>
    <string name="negocio_administrador_id">ID del administrador: </string>
    <string name="negocio_telefono">Teléfono: </string>
    <string name="negocio_apertura">Hora de apertura: </string>
    <string name="negocio_cierre">Hora de cierre: </string>
    <string name="negocio_direccion">Dirección: </string>
    <string name="producto_id">ID Producto: </string>
    <string name="producto_nombre">Producto: </string>
    <string name="producto_precio">Precio: $</string>
    <string name="producto_descripcion">Descripción: </string>
    <string name="producto_tipo">Tipo: </string>
    <string name="producto_disponible">Producto disponible</string>
    <string name="producto_no_disponible">Producto no disponible</string>
    <string name="producto_existencias">Existencias: </string>
    <string name="ubicacionCliente">Seleccione su ubicacion permanente:</string>
    <string name="distritoCliente">Distrito:</string>
    <string name="municipioCliente">Municipio:</string>
    <string name="departamentoCliente">Departamento:</string>
    <string-array name="departamento">
        <item>Seleccione el departamento...</item>
    </string-array>
    <string name="productoNombre">Nombre:</string>
    <string name="productoPrecio">Precio:</string>
    <string name="productoDescripcion">Descripcion:</string>
    <string name="productoExistencias">Existencias:</string>
    <string name="productoTipo">Tipo:</string>
    <string name="productoIndicaciones">Editando producto, ingrese sus nuevos datos</string>
    <string name="revisar_factura">Revisar Factura</string>
    <string name="ver_estado_orden">Ver Estado de mi orden</string>
    <string name="pedido_confirmado">¡Pedido confirmado! Gracias por confiar en nosotros, pronto recibirás tu pedido</string>
    <string name="pago_exito">¡Pago realizado con éxito!</string>
</resources>