<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".negocio.negocio.EditarMiNegocioActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="#F27329"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


    <TextView
        android:id="@+id/textViewIndicacion1"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:text="@string/negocioEditarIndicaciones"

        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


    <TextView
        android:id="@+id/textViewIndicacion2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"

        android:importantForAutofill="no"
        android:text="@string/negocioEditarIndicaciones2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textViewIndicacion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:importantForAutofill="no"
        android:text="@string/negocioEditarIndicaciones3"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/editNegocioNombre"
        android:layout_width="240dp"
        android:layout_height="35dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="150"

        android:maxLength="10"
        android:text=""
        android:textAlignment="textStart"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicacion1"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/editNegocioTelefono"
        android:layout_width="240dp"
        android:layout_height="35dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="150"

        android:inputType="phone"
        android:maxLength="8"
        android:text=""
        android:textAlignment="textStart"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNegocioNombre"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/negocioNombre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicacion1" />

    <TextView
        android:id="@+id/textView10"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/negocioApertura"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicacion3" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/negocioTelefono"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/negocioDistrito"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/negocioDepartamento"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicacion2" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/negocioMunicipio"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />


    <Button
        android:id="@+id/btnGuadar"
        android:layout_width="200dp"
        android:layout_height="30dp"

        android:layout_marginTop="24dp"

        android:layout_marginEnd="32dp"
        android:background="@drawable/circular_button_backgroundorange"
        android:onClick="actualizarNegocio"

        android:text="@string/botonActualizar"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHoraCierre"
        tools:ignore="VisualLintOverlap,VisualLintButtonSize,TextContrastCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinnerDepartamento"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicacion2"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinnerMunicipio"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDepartamento"
        tools:ignore="TouchTargetSizeCheck" />


    <Spinner
        android:id="@+id/spinnerDistrito"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMunicipio"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/negocioUbicacionDescripcion"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/editUbicacionDescripcion"
        android:layout_width="240dp"
        android:layout_height="35dp"

        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="150"

        android:maxLength="20"
        android:text=""
        android:textAlignment="textStart"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDistrito"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView18"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/negocioCierre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/btnHoraApertura"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="@color/black"


        android:onClick="abrirTimePicker"
        android:text="Hora Apertura"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicacion3"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnHoraCierre"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="32dp"
        android:background="@color/black"

        android:onClick="abrirTimePicker2"
        android:text="Hora Cierre"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHoraApertura"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>
