<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="197dp"
        android:layout_height="188dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aprobado_check" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/pago_exito"
        android:textSize="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txtAgradecimiento"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/pedido_confirmado"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnVerEstadoOrden"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginBottom="112dp"
        android:text="@string/ver_estado_orden"
        android:background="@drawable/circular_button_backgroundorange"
        android:textColor="@color/white"
        android:onClick="verEstadoPedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAgradecimiento"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/btnVerResumen"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/circular_button_backgroundorange"
        android:text="@string/revisar_factura"
        android:textColor="@color/white"
        android:onClick="solicitarVerFactura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerEstadoOrden" />
</androidx.constraintlayout.widget.ConstraintLayout>